<resources>
    <string name="app_name">WWATestTask</string>
    <string name="score">Score:</string>
    <string name="tap_to_start">Tap to Start</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="pacman">Pacman</string>
    <string name="attempts">Attempts:</string>
    <string name="loose">You loose</string>
    <string name="repeat">REPEAT</string>
    <string name="exit">EXIT</string>
    <string name="webview">WebView</string>
    <string name="start_game">Start Game</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="start">START</string>
</resources>