<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_game">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/score"
        android:paddingBottom="25dp">

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:textColor="@color/black"
            android:paddingHorizontal="15dp"
            android:text="@string/score"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/attemptsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attempts"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/attempts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingHorizontal="15dp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/null_image"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

    </LinearLayout>


    <GridLayout
        android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:paddingTop="45dp"
        android:rowCount="4"
        android:layout_gravity="center"
        >

        <ImageView
            android:id="@+id/a1"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/green"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/a2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/red"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/a3"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/yellow"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/a4"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/yellow"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/a5"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/yellow"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/b1"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/yellow"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/b2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/yellow"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/b3"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/yellow"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/b4"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/green"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/b5"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/red"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/c1"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/yellow"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/c2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/yellow"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/c3"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/yellow"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/c4"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/yellow"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/c5"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/yellow"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/d1"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/yellow"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/d2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/yellow"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/d3"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/yellow"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/d4"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/yellow"
            android:src="@drawable/question_block" />

        <ImageView
            android:id="@+id/d5"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/yellow"
            android:src="@drawable/question_block" />

    </GridLayout>

</LinearLayout>